--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ayushwebsite",
+  "name": "Ayush Kumar",
   "version": "1.0.0",
   "description": "PersonalWebsite",
   "author": "Ayush Kumar <ayushkumar0630@gmail.com>",
